# python-project-83

./: .gitignore  Makefile  PyCI.yml  README.md  database.sql  pyproject.toml  url_checks
page_analyzer/: .env  .gitignore  __init__.py  app.py  build.sh  db.py  page_checker.py  utils.py
page_analyzer/templates/: base.html  index.html  url_detail.html  urls.html
