[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Motlakhov <dmitrijmotlahov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"